[gd_scene load_steps=20 format=3 uid="uid://bqlmvu70doeka"]

[ext_resource type="Script" path="res://scripts/Enemies/alien_p.gd" id="1_8v6q3"]
[ext_resource type="Texture2D" uid="uid://dv1clwegqxdfk" path="res://assets/SBGJ_Assets/ABJ_Enemy2_Idle.png" id="2_p4jyc"]
[ext_resource type="Texture2D" uid="uid://djtv1qiotuhhx" path="res://assets/SBGJ_Assets/ABJ_Enemy2_Sprint.png" id="3_c01bs"]
[ext_resource type="Texture2D" uid="uid://ddbt7dl2lmror" path="res://assets/SBGJ_Assets/AGJ_Enemy2_Attack.png" id="4_0jedf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f2gpg"]
atlas = ExtResource("2_p4jyc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sw2d"]
atlas = ExtResource("2_p4jyc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lo14"]
atlas = ExtResource("3_c01bs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iaqv"]
atlas = ExtResource("3_c01bs")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_svofk"]
atlas = ExtResource("4_0jedf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kprh"]
atlas = ExtResource("4_0jedf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7tfv"]
atlas = ExtResource("4_0jedf")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_heyvi"]
atlas = ExtResource("4_0jedf")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dsnb"]
atlas = ExtResource("4_0jedf")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_joyca"]
atlas = ExtResource("4_0jedf")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s28l"]
atlas = ExtResource("4_0jedf")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cy4bb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2gpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sw2d")
}],
"loop": true,
"name": &"Idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lo14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iaqv")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svofk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kprh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7tfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heyvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dsnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joyca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s28l")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qay4l"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wli5u"]
radius = 36.0555

[sub_resource type="CircleShape2D" id="CircleShape2D_d87qw"]
radius = 10.198

[node name="AlienP" type="CharacterBody2D"]
script = ExtResource("1_8v6q3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cy4bb")
animation = &"attack"
frame_progress = 0.350803

[node name="basic_collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_qay4l")

[node name="detection area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection area"]
visible = false
shape = SubResource("CircleShape2D_wli5u")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource("CircleShape2D_d87qw")

[connection signal="body_entered" from="detection area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
